# multimodal-deepfake-detection

./: .env.example  .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo_site/: README.md  app.py  inference.py
demo_site/samples/: README.md
demo_site/static/: app.js  style.css
demo_site/templates/: index.html
docs/: ARCHITECTURE.md  ROADMAP.md
notebook_v2/: colab_quickstart.md  dataset_audit.py  deepfake_v2.py  deepfake_v3.py  live_monitor.py  run_train.sh  smoke_test.py  syncnet_score_testset.py  syncnet_test.py  v3_post_processing.py  v4_cross_attention.py
results/: ablation.csv  per_category.csv  test_results.json
scripts/: analyze_video.py  summarize_results.py
src/deepfake_detector/: __init__.py  reporting.py
tests/: test_reporting.py
