[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-deepfake-detection"
version = "0.1.0"
description = "Multimodal deepfake detection utilities, demo, and training scripts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nur Yağmur Tuncer", email = "y.tuncer1004@gmail.com" }]

[tool.setuptools.packages.find]
where = ["src"]
